# greplm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.ps1  install.sh
.cursor/agents/: greplm-search.md
.github/workflows/: audit.yml  benchmarks.yml  ci.yml  fuzz.yml  release.yml
agents/: claude.md  gemini.md  kiro.md
bench/: README.md  queries.json  run_bench.py
bench/context/: pack_bench.py  tasks.json
bench/projects/: README.md  RESULTS.md  linux.queries.json  linux.tasks.json  odoo.queries.json  odoo.tasks.json  projects.json  react.queries.json  react.tasks.json  results.json  run_all.py
contrib/launchd/: com.greplm.daemon.plist  com.greplm.global.plist  install-launchd.sh
contrib/systemd/: greplm-daemon@.service  greplm-global.service
crates/greplm-cli/: Cargo.toml  README.md
crates/greplm-cli/agents/: claude.md  copilot.md  cursor.md  gemini.md  kiro.md  opencode.md  pi.md  reasonix.md  rules.md
crates/greplm-cli/src/: agent.rs  main.rs  mcp.rs  onboard.rs  ops.rs
crates/greplm-cli/tests/: cli.rs
crates/greplm-core/: Cargo.toml  README.md
crates/greplm-core/benches/: hot_paths.rs
crates/greplm-core/src/: cache.rs  client.rs  config.rs  context.rs  daemon.rs  error.rs  fsutil.rs  git.rs  indexer.rs  io_backend.rs  lang.rs  lib.rs  meta.rs  paths.rs  proto.rs  resolve.rs  savings.rs  search.rs  segment.rs  semantic.rs  structural.rs  symbol.rs  table.rs  trigram.rs  walk.rs  watch.rs
crates/greplm-core/tests/: crash_injection.rs  end_to_end.rs  search_equivalence.rs
crates/greplm-mcp/: Cargo.toml  README.md
crates/greplm-mcp/src/: main.rs
crates/greplm-mcp/tests/: mcp.rs
docs/: README.md  code-intelligence.md  commands.md  configuration.md  features.md  getting-started.md  mcp.md  token-efficiency.md  usage.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: cache_record.rs  meta_decode.rs  proto_request.rs  resolve_ident.rs  search_match.rs  segment_corrupt.rs  segment_postings.rs  structural_compile.rs  symbol_extract.rs  trigram_query.rs
