[package]
name = "greplm-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core indexing and search engine for greplm: a trigram code index for LLM agents."

[features]
default = []
# Optional Linux-only io_uring ingest backend.
io-uring = []
# Optional offline semantic (vector) search layer. The HashEmbedder is always
# available; the trained Model2Vec embedder pulls in `tokenizers`.
semantic = ["dep:tokenizers"]

[dependencies]
anyhow = "1.0.102"
arc-swap = "1.7.1"
blake3 = "1.8.5"
fst = "0.4.7"
ignore = "0.4.26"
lru = "0.12.5"
memchr = "2.8.1"
memmap2 = "0.9.10"
notify = "8.2.0"
once_cell = "1.21.4"
postcard = { version = "1.1.3", features = ["use-std"] }
rayon = "1.12.0"
redb = "2.6.3"
regex = "1.12.3"
regex-syntax = "0.8.10"
roaring = "0.11.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["raw_value"] }
simdutf8 = "0.1.5"
thiserror = "2.0.18"
tokenizers = { version = "0.20", default-features = false, features = ["onig"], optional = true }
toml = "1.1.2"
tracing = "0.1.44"
tree-sitter = "0.26.9"
tree-sitter-c = "0.24.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-cpp = "0.23.4"
tree-sitter-dart = "0.2.0"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-php = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.2"
tree-sitter-swift = "0.7.3"
tree-sitter-typescript = "0.23.2"
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.11.0"

[[bench]]
name = "hot_paths"
harness = false
