[package]
name = "greplm-mcp"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "greplm Model Context Protocol (MCP) stdio server."

[[bin]]
name = "greplm-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
greplm-core = { path = "../greplm-core", version = "0.1.0" }
rmcp = { version = "1.7.0", features = ["server", "transport-io", "macros"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-std"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
